--- a/css/layout.css
+++ b/css/layout.css
@@ -532,6 +532,11 @@ input:-moz-placeholder {
 				width: 250px;
 				text-align: left;
 			}
+			.b-4 .b-case>.left.fixed{
+				position: fixed;
+				top: 0;
+				z-index: 1500;
+			}
 				.b-left-thumbs{
 
 				}
@@ -595,6 +600,9 @@ input:-moz-placeholder {
 			.b-4 .b-slide{
 
 			}
+				.b-4 .b-slide:nth-child(n+2){
+					display: none;
+				}
 				.b-4 .b-slide .b-gallery{
 
 				}
