--- a/css/layout.css
+++ b/css/layout.css
@@ -1163,6 +1163,7 @@ input:-moz-placeholder {
 		}
 		.b-6 .b-staff{
 			margin-top: 70px;
+			padding-bottom: 100px;
 		}
 			.b-6 .b-staff>.left{
 
@@ -1171,7 +1172,7 @@ input:-moz-placeholder {
 					
 				}
 					.b-staff-thumbs li{
-						width: 250px;
+						width: 260px;
 						padding-right: 10px;
 						padding-left: 76px;
 						box-sizing: border-box;
@@ -1184,7 +1185,7 @@ input:-moz-placeholder {
 							height: 50px;
 							border-radius: 50%;
 							background-position: 50% 50%;
-							background-repeat: no-repeat;
+							background-size: cover;
 						}
 						.b-staff-thumbs li h6{
 							font-family: "SeroPro-Bold";
@@ -1196,43 +1197,68 @@ input:-moz-placeholder {
 							color: #7d7d7d;
 						}
 			.b-staff-slider{
-
+				width: 620px;
+				margin-right: 50px;
 			}
 				.b-staff-slider .b-slide{
 
 				}
 					.b-6 .b-image-cont{
-
+						display: inline-block;
+						margin-top: 50px;
 					}
 						.b-6 .b-image-cont .b-image{
-
+							background-position: 50% 50%;
+							background-size: cover;
+							width: 254px;
+							height: 254px;
+							margin-bottom: 25px;
 						}
 						.b-6 .b-image-cont h3{
-
+							font-size: 25px;
+							line-height: 35px;
+							font-family: "SeroPro-Bold";
+							margin-bottom: 3px;
 						}
 						.b-6 .b-image-cont h5{
-
+							font-size: 17px;
+							line-height: 35px;
 						}
 					.b-6 .b-skill{
-
+						border-top: 1px solid #e5e5e5;
+						border-bottom: 1px solid #e5e5e5;
+						margin-top: 40px;
+						padding: 27px 0px 22px;
 					}
 						.b-6 .b-skill li{
-
+							float: left;
+							width: 33.33333%;
 						}
 							.b-6 .b-skill li p{
-
+								line-height: 24px;
+								font-size: 13px;
+								font-family: "SeroPro-Bold";
+								text-transform: uppercase;
+								letter-spacing: 1px;
 							}
 					.b-6 .b-desc{
-
+						padding-top: 50px;
 					}
 						.b-6 .b-desc h3{
-
+							font-size: 21px;
+							line-height: 28px;
+							margin-bottom: 40px;
 						}
 						.b-6 .b-desc p{
-
+							width: 540px;
+							display: inline-block;
+							font-size: 15px;
+							text-align: left;
+							line-height: 24px;
+							margin-bottom: 20px;
 						}
 					.b-6 .b-butt-cont{
-
+						padding-top: 30px;
 					}
 						.b-6 .b-green-butt{
 
