--- a/css/layout.css
+++ b/css/layout.css
@@ -1243,7 +1243,43 @@ input:-moz-placeholder {
 			.b-staff-slider{
 				width: 620px;
 				margin-right: 50px;
+				position: relative;
 			}
+				.b-staff-nav{
+					cursor: pointer;
+					position: absolute;
+					top: 0px;
+					width: 48px;
+					height: 48px;
+					box-shadow: inset 0 0 0 1px #262626;
+					border-radius: 50%;
+				}
+					.b-staff-nav:after{
+						position: absolute;
+						content: "s";
+						font-size: 0px;
+						width: 15px;
+						height: 28px;
+						left: 50%;
+						margin-left: -9px;
+						top: 50%;
+						margin-top: -14px;
+						background-repeat: no-repeat;
+						background-image: url('../i/arrow-sprite.png');
+					}
+					.b-left-butt{
+						left: 10px;
+					}
+						.b-left-butt:after{
+							background-position: -30px 0px;
+						}
+					.b-right-butt{
+						right: 50px;
+					}
+						.b-right-butt:after{
+							margin-left: -5px;
+							background-position: -45px 0px;
+						}
 				.b-staff-slider .b-slide{
 
 				}
