--- a/css/layout.css
+++ b/css/layout.css
@@ -927,6 +927,11 @@ input:-moz-placeholder {
 					margin-top: -14px;
 					background-repeat: no-repeat;
 					background-image: url('../i/arrow-sprite.png');
+					-webkit-transition: all 0ms 50ms ease-out;
+					   -moz-transition: all 0ms 50ms ease-out;
+					    -ms-transition: all 0ms 50ms ease-out;
+					   	 -o-transition: all 0ms 50ms ease-out;
+							transition: all 0ms 50ms ease-out;
 				}
 			.b-way-nav-left{
 				left: 0px;
@@ -1195,6 +1200,9 @@ input:-moz-placeholder {
 .b-6{
 	background-color: #FFF;
 	color: #262626;
+	background-position: 50% 364px;
+	background-repeat: no-repeat;
+	background-image: url('../i/line-6.png');
 }
 	.b-6 .b-block{
 
@@ -1242,18 +1250,27 @@ input:-moz-placeholder {
 						}
 			.b-staff-slider{
 				width: 620px;
-				margin-right: 50px;
+				margin-right: 46px;
 				position: relative;
 			}
 				.b-staff-nav{
 					cursor: pointer;
 					position: absolute;
-					top: 0px;
+					top: 154px;
 					width: 48px;
 					height: 48px;
-					box-shadow: inset 0 0 0 1px #262626;
+					box-shadow: inset 0 0 0 1px #555555;
 					border-radius: 50%;
+					opacity: 0.8;
+					-webkit-transition: all 150ms ease-out;
+					   -moz-transition: all 150ms ease-out;
+					    -ms-transition: all 150ms ease-out;
+					   	 -o-transition: all 150ms ease-out;
+							transition: all 150ms ease-out;
 				}
+					.b-staff-nav:hover{
+						box-shadow: inset 0 0 0 25px #555555;
+					}
 					.b-staff-nav:after{
 						position: absolute;
 						content: "s";
@@ -1266,20 +1283,32 @@ input:-moz-placeholder {
 						margin-top: -14px;
 						background-repeat: no-repeat;
 						background-image: url('../i/arrow-sprite.png');
+						-webkit-transition: all 0ms 50ms ease-out;
+						   -moz-transition: all 0ms 50ms ease-out;
+						    -ms-transition: all 0ms 50ms ease-out;
+						   	 -o-transition: all 0ms 50ms ease-out;
+								transition: all 0ms 50ms ease-out;
 					}
 					.b-left-butt{
-						left: 10px;
+						left: 63px;
 					}
 						.b-left-butt:after{
 							background-position: -30px 0px;
 						}
+							.b-left-butt:hover:after{
+								background-position: 0px 0px;
+							}
 					.b-right-butt{
-						right: 50px;
+						right: 71px;
+						top: 148px;
 					}
 						.b-right-butt:after{
-							margin-left: -5px;
+							margin-left: -6px;
 							background-position: -45px 0px;
 						}
+							.b-right-butt:hover:after{
+								background-position: -15px 0px;
+							}
 				.b-staff-slider .b-slide{
 
 				}
