--- a/css/layout.css
+++ b/css/layout.css
@@ -1758,20 +1758,19 @@ input:-moz-placeholder {
 
 
 .top-menu {
-	margin-top: 170px;
+	margin-top: 165px;
 	width: 440px;
-    position: fixed;
-    /*display: none;*/
-    z-index: 5000;
-    left: 50%;
-    margin-left: -220px;
-    visibility: hidden;
-    opacity: 0;
-    -webkit-transition: all 300ms ease-out;
-       -moz-transition: all 300ms ease-out;
-        -ms-transition: all 300ms ease-out;
-       	 -o-transition: all 300ms ease-out;
-    		transition: all 300ms ease-out;
+	position: fixed;
+	z-index: 5000;
+	margin-left: 320px;
+	left: 0;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all 300ms ease-out;
+	-moz-transition: all 300ms ease-out;
+	-ms-transition: all 300ms ease-out;
+	-o-transition: all 300ms ease-out;
+	transition: all 300ms ease-out;
 }
 	.top-menu.shown{
 		visibility: visible;
@@ -1789,23 +1788,60 @@ input:-moz-placeholder {
 	}
 	.top-menu li {
 		border-bottom: 1px solid #151b1f;
-		text-align: center;
+		text-align: left;
 		cursor: pointer;
 	}
 	.top-menu li:last-child {
 		border-bottom: none;
 	}
 		.top-menu li a{
-			font-size: 21px;
+			font-size: 17px;
 			font-family: "SeroPro-Bold";
 			color: rgb(255, 255, 255);
 			text-transform: uppercase;
-			line-height: 3.762;
-			letter-spacing: 2px;
+			line-height: 3.824;
+			letter-spacing: 1.7px;
 		}
 		.top-menu li:hover {
-			background-color: #41d0c6;
+			/*background-color: #41d0c6;*/
+			border-bottom: 1px solid #fff;
 		}
+.sub-menu {
+	margin-left: 20px;
+	margin-bottom: 12px;
+}
+	.sub-menu li {
+		
+border-bottom: none;
+	}
+		.sub-menu li a {
+			line-height: 2.99;
+			font-size: 12px;
+			font-family: "SeroPro";
+			color: #acc7d9;
+		}
+		.sub-menu li a span {
+
+margin-left: 25px;
+
+letter-spacing: 1.1px;
+
+line-height: 1.3;
+
+display: inline-block;
+
+border-bottom: 1px solid #21272b;
+
+}
+		.sub-menu li:hover {
+			border-bottom: none;
+		}
+			.sub-menu li:hover a {
+				color: #41d0c6;
+			}
+				.sub-menu li:hover a span {
+					border-bottom: 1px solid #41d0c6;
+				}
 .menu-overlay {
 	width: auto;
     height: auto;
