--- a/css/layout.css
+++ b/css/layout.css
@@ -1968,8 +1968,8 @@ input:-moz-placeholder {
 	width: 440px;
 	position: fixed;
 	z-index: 5000;
-	margin-left: 320px;
-	left: 0;
+	margin-left: -480px;
+	left: 50%;
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: all 300ms ease-out;
