--- a/css/layout.css
+++ b/css/layout.css
@@ -135,24 +135,28 @@ input:-moz-placeholder {
 			}
 				.b-1 .b-top .b-logo-cont .b-burger-button-cont{
 					display: inline-block;
-					margin-left: 10px;
-					margin-right: 44px;
+					margin-left: 0px;
+					margin-right: 54px;
 					width: 30px;
 					height: 40px;
-					margin-top: 13px;
+					margin-top: 8px;
 					position: relative;
 				}
 				.b-1 .b-top .b-logo-cont .b-burger-button{
-					width: 30px;
-					height: 40px;
-					position: absolute;
-					left: 0px;
-					top: 0px;
-					z-index: 99999;
+					width: 50px;
+					height: 50px;
+					position: fixed;
+					border-radius: 50%;
+					left: 50%;
+					margin-left: -490px;
+					top: 57px;
+					z-index: 999;
+					background-color: rgba(0, 0, 0, 0.69);
 				}
 					.b-1 .b-top .b-logo-cont .b-burger-button span{
 						width: 30px;
-						top: 5px;
+						top: 10px;
+						left: 10px;
 						height: 2px;
 						opacity: 0.7;
 						-webkit-transition: all 100ms ease-out;
@@ -166,6 +170,12 @@ input:-moz-placeholder {
 					}
 						.b-1 .b-top .b-logo-cont .b-burger-button.opened span{
 							background-color: transparent;
+							left: 15px;
+							-webkit-transition: all 300ms ease-out;
+							   -moz-transition: all 300ms ease-out;
+							    -ms-transition: all 300ms ease-out;
+							   	 -o-transition: all 300ms ease-out;
+									transition: all 300ms ease-out;
 						}
 						.b-1 .b-top .b-logo-cont .b-burger-button span:after,
 						.b-1 .b-top .b-logo-cont .b-burger-button span:before{
@@ -541,7 +551,7 @@ input:-moz-placeholder {
 			.b-4 .b-case>.left.fixed{
 				position: fixed;
 				top: 10px;
-				z-index: 1500;
+				z-index: 150;
 			}
 			.b-4 .b-case>.left.abs{
 				position: absolute;
@@ -680,6 +690,9 @@ input:-moz-placeholder {
 							width: 570px;
 							border-right: 1px solid #e5e5e5;
 						}
+							.b-hidden-tasks{
+								display: none;
+							}
 							.b-4 .b-slide .b-task{
 								position: relative;
 								text-align: left;
@@ -2052,7 +2065,7 @@ input:-moz-placeholder {
     top: 0;
     left: 0;
     display: none;
-    z-index: 2000;
+    z-index: 200;
     background-color: rgba(8, 14, 19,0.98);
 }
 .fancybox-close {
