--- a/css/layout.css
+++ b/css/layout.css
@@ -556,7 +556,7 @@ input:-moz-placeholder {
 			.b-4 .b-case>.left.abs{
 				position: absolute;
 				bottom: 0;
-				z-index: 1500;
+				z-index: 150;
 			}
 				.b-left-thumbs{
 
@@ -1977,7 +1977,7 @@ input:-moz-placeholder {
 
 
 .top-menu {
-	margin-top: 165px;
+	margin-top: 105px;
 	width: 440px;
 	position: fixed;
 	z-index: 5000;
@@ -1993,11 +1993,11 @@ input:-moz-placeholder {
 }
 	.top-menu.shown{
 		visibility: visible;
-		-webkit-transform: translateY(-30px);
-		   -moz-transform: translateY(-30px);
-		    -ms-transform: translateY(-30px);
-		   	 -o-transform: translateY(-30px);
-				transform: translateY(-30px);
+		-webkit-transform: translateY(30px);
+		   -moz-transform: translateY(30px);
+		    -ms-transform: translateY(30px);
+		   	 -o-transform: translateY(30px);
+				transform: translateY(30px);
 		opacity: 1;
 		-webkit-transition: all 300ms 200ms ease-out;
 	       -moz-transition: all 300ms 200ms ease-out;
@@ -2021,7 +2021,7 @@ input:-moz-placeholder {
 			line-height: 3.824;
 			letter-spacing: 1.7px;
 		}
-		.top-menu > li > a:hover{
+		.top-menu > li:hover > a{
 			/*background-color: #41d0c6;*/
 			border-bottom: 1px solid #fff;
 		}
@@ -2031,6 +2031,7 @@ input:-moz-placeholder {
 }
 	.sub-menu li {		
 		border-bottom: none;
+		cursor: pointer;
 	}
 		.sub-menu li a {
 			line-height: 2.99;
